tests/fixtures/invalid/pow_bool_bytes_bool.py
# Cannot call pow() with Bool, Bytes, Bool
x = pow(True, b"hello", True)
